# tinyhat

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.local.md.example  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  __init__.py  context.py  hermes.plugin.json  openclaw.plugin.json  package.json  platform.py  plugin.yaml  pyproject.toml  schemas.py  secret_handoff.py  secret_handoff_worker.py  terminal_env_hook.py  tools.py
.agents/skills/: README.md
.agents/skills/codex/: SKILL.md
.agents/skills/commit/: SKILL.md
.agents/skills/define-tests/: SKILL.md
.agents/skills/dev-reset/: SKILL.md
.agents/skills/open-pr/: SKILL.md
.agents/skills/release/: SKILL.md
.agents/skills/review/: SKILL.md
.agents/skills/review-changelog/: SKILL.md
.agents/skills/sharpen-skill/: SKILL.md
.agents/skills/tinyhat-plugin-skill-authoring/: SKILL.md
.agents/skills/tinyhat-plugin-skill-authoring/agents/: openai.yaml
.agents/skills/update-guidance/: SKILL.md
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: add-agent  dev-reset  propose-roadmap  review-changelog
.claude/skills/add-agent/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/create-issue/: SKILL.md
.claude/skills/dev-reset/: SKILL.md
.claude/skills/file-skill-gap/: SKILL.md
.claude/skills/open-pr/: SKILL.md
.claude/skills/propose-roadmap/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/review-pr/: SKILL.md  example.md
.claude/skills/skill-authoring/: SKILL.md
.claude/skills/update-guidance/: SKILL.md
.claude/skills/update-guidance/references/: skill-frontmatter.md
.cursor/rules/: add-agent.mdc  commit.mdc  dev-reset.mdc  open-pr.mdc  propose-roadmap.mdc  release.mdc  review-changelog.mdc  update-guidance.mdc
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  skill_proposal.yml
.github/scripts/: check_packaging.sh  check_skill_env_passthrough.sh  lint_skills.py
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  artifacts.md  capabilities.md  cross-agent-skills.md  local-development.md  runtime-boundary.md  skill-authoring.md  user-flows.md
roadmap/: README.md  considering.md  later.md  next.md  now.md  rejected.md
scripts/: check_dev_skills.py  check_plugin_load.mjs  dev_reset.py  gather_snapshot.py  render_report.py  routine.py  tinyhat_paths.py  validate_framework_package.py  validate_openclaw_package.py  validate_skill_frontmatter.py
skills/audit/: SKILL.md
skills/audit-history/: SKILL.md
skills/audit/references/: writing-the-analysis.md
skills/audit/templates/: report.css  report.html.tmpl  report.md.tmpl
skills/history/: SKILL.md
skills/open/: SKILL.md
skills/open-latest-audit/: SKILL.md
skills/review/: SKILL.md
skills/review/references/: writing-the-analysis.md
skills/review/templates/: report.css  report.html.tmpl
skills/routine/: SKILL.md
skills/skill-audit/: SKILL.md
skills/skill-audit/references/: writing-the-analysis.md
skills/skill-audit/templates/: report.css  report.html.tmpl  report.md.tmpl
skills/tinyhat-codex-auth/: SKILL.md
skills/tinyhat-computer-access/: SKILL.md
skills/tinyhat-package-inventory/: SKILL.md
skills/tinyhat-platform/: SKILL.md
skills/tinyhat-plugin-version/: SKILL.md
skills/tinyhat-private-secret/: SKILL.md
skills/tinyhat-runtime-status/: SKILL.md
skills/tinyhat-secrets/: SKILL.md
skills/tinyhat-software-updates/: SKILL.md
skills/tinyhat-subscriptions/: SKILL.md
skills/tinyhat-support-report/: SKILL.md
skills/tinyhat-tell-joke/: SKILL.md
src/: index.js  load_beacon.js  platform_helpers.js  presentation_helpers.js  subscription_builders.js  subscription_commands.js  subscriptions.js  support_guidance.js  telegram_delivery.js  tool_results.js
test/: check_plugin_load.test.mjs  load_beacon.test.mjs  platform_helpers.test.mjs  presentation_helpers.test.mjs  software_updates_skill.test.mjs  subscription_flow.test.mjs  support_guidance.test.mjs  telegram_delivery.test.mjs  test_hermes_adapter.py  test_terminal_env_hook.py
