[project]
name = "tinyhat"
version = "0.20.9"
description = "Hermes plugin that teaches agents how to use Tinyhat platform capabilities."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Tinyloop", email = "tinyhat@tinyloop.co" }]
keywords = ["tinyhat", "hermes", "plugin", "skills", "agent-platform"]
dependencies = []

[project.urls]
Homepage = "https://github.com/tinyhat-ai/tinyhat"
Repository = "https://github.com/tinyhat-ai/tinyhat"
Issues = "https://github.com/tinyhat-ai/tinyhat/issues"
Changelog = "https://github.com/tinyhat-ai/tinyhat/blob/main/CHANGELOG.md"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PL", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
